# signals-lab

./: README.md  aliasing.py  continuous-discrete.py  det-ran.py  iir-fir.py  pyproject.toml
group-1/: causal-anti-none.py  odd-even.py  periodic-aperiodic.py  sample.py
group-2/: convolution.py  correlation.py  pzg-filters.py  z-transform.py
group-3/: 1a.py  1b.py  1c.py  2.py  3.py
