[tool.poetry]
name = "matplotlib numpy"
version = "0.1.0"
description = ""
authors = ["keith-moreno <108557464+k1tooy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
